--- a/src/styles.css
+++ b/src/styles.css
@@ -5,17 +5,17 @@
 }
 
 /* body {
-  background: radial-gradient(#e5e5e5, #ffff, #e5e5e5);
-} */
+    background: radial-gradient(#e5e5e5, #ffff, #e5e5e5);
+  } */
 
 /* Post */
 #singlePostPage {
-  padding-top: 30px;
+  padding-top: 50px;
 }
 
 .container-style {
   margin-bottom: 50px;
-  border: solid 1px lightgrey;
+  border: solid 1px black;
   box-shadow: 5px 10px 20px 1px rgba(0, 0, 0, 0.253);
   padding-top: 20px;
   width: max-content;
@@ -53,23 +53,23 @@
 }
 
 #user_img {
-  height: 45px;
-  width: 45px;
+  height: 65px;
+  width: 65px;
   margin: 10px;
   border-radius: 50%;
 }
 .user_name {
-  margin: 0;
-  font-size: large;
-  font-weight: 600;
+  padding: 5px;
+  margin-top: 5px;
 }
 .user_branch {
-  margin: 0;
+  padding-bottom: 5px;
+  margin-left: 5px;
 }
 .user_details {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: flex-start;
 }
 .postdetails {
@@ -84,15 +84,17 @@
   font-weight: 600;
   width: 650px;
 }
-.post_image {
+.post_image img {
   margin: 5px;
   margin-bottom: 10px;
   padding: 5px;
-  width: 100%;
-  height: 100%;
+  width: 35vw;
 }
 .post_content {
   margin: 10px;
+  padding: 10px;
+  text-align: justify;
+  text-indent: 50px;
 }
 
 /* Model  */
@@ -107,13 +109,12 @@
   align-items: center;
 }
 
-.commentBox {
+#commentBox {
   margin-top: 10px;
   padding-top: 10px;
   width: 420px;
   height: 450px;
-  color: white;
-  background-color: gray;
+  background-color: lightgrey;
   border: 1px solid black;
   border-top-left-radius: 20px;
   border-style: outset;
@@ -121,15 +122,11 @@
   overflow-x: hidden;
 }
 
-#reply {
-  color: dodgerblue;
-}
-
 #reply:hover {
   font-weight: 600;
   cursor: pointer;
 }
-.commentBox .btn {
+#commentBox .btn {
   margin-top: 10px;
   padding: 10px;
   font-size: 20px;
@@ -155,7 +152,24 @@
   border: none;
   margin-left: 3px;
 }
+
 .comment-card {
-  margin: 10px 0;
-  padding: 4px;
+  background-color: #eff3f3;
+  color: black;
+  margin: 16px 10px;
+  padding-left: 7px;
+  padding-top: 4px;
+}
+
+.like,
+.comment,
+.bookmark {
+  cursor: pointer;
+  transition: all 0.1s;
+}
+
+.like:active,
+.comment:active,
+.bookmark:active {
+  transform: scale(0.8);
 }
