--- a/src/App.css
+++ b/src/App.css
@@ -711,3 +711,11 @@
     background-color: #353941;
   }
 } */
+
+.desc {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* number of lines to show */
+  -webkit-box-orient: vertical;
+}
