--- a/src/components/SinglePost/styles.css
+++ b/src/components/SinglePost/styles.css
@@ -92,15 +92,14 @@
   height: 100%;
 }
 .post_content {
-  margin: 10px;
+  margin: 20px 0;
 }
-.post_content pre {
+.post_content {
   font-family: unset;
-  width: 800px;
-  /* overflow: hidden; */
+  width: 625px;
+  overflow: hidden;
+  white-space: pre-wrap;
   word-wrap: break-word;
-  line-break: strict;
-  -ms-line-break: strict;
 }
 
 /* Model  */
